setup workbox project folder

--- a/project/src/pages/404.html
+++ b/project/src/pages/404.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
 Copyright 2018 Google Inc.
 
@@ -13,26 +14,28 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<!DOCTYPE html>
+
 <html lang="en">
-  <head>
+    <head>
+        <!-- Set the viewport -->
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, user-scalable=yes"
+        />
 
-    <!-- Set the viewport -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+        <!-- Set character encoding -->
+        <meta charset="utf-8" />
 
-    <!-- Set character encoding -->
-    <meta charset="utf-8">
+        <!-- Set title -->
+        <title>404 Page</title>
 
-    <!-- Set title -->
-    <title>404 Page</title>
-
-    <!-- Request styles -->
-    <link rel="stylesheet" href="/style/main.css" />
-  </head>
-  <body>
-    <h1>404 page</h1>
-    <p class="padded">Woops! Can't find the page you are requesting.</p>
-    <br><br>
-    <a href="../index.html" class="back-link">Home</a>
-  </body>
+        <!-- Request styles -->
+        <link rel="stylesheet" href="/style/main.css" />
+    </head>
+    <body>
+        <h1>404 page</h1>
+        <p class="padded">Woops! Can't find the page you are requesting.</p>
+        <br /><br />
+        <a href="../index.html" class="back-link">Home</a>
+    </body>
 </html>
